added tests and new features

--- a/agent_config.yml
+++ b/agent_config.yml
@@ -57,3 +57,9 @@ Safety:
   MaxCostPerQuery: 0.50
   TimeoutSeconds: 60
   MaxReflectionIterations: 3
+
+StructuredOutputs:
+  Enabled: true
+  StrictSchemaValidation: true
+  FallbackOnError: true
+  MaxRetries: 3
