--- a/src/Core/WorkflowPlus.AIAgent.Core.csproj
+++ b/src/Core/WorkflowPlus.AIAgent.Core.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Azure.Core" Version="1.36.0" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     </ItemGroup>
 
