--- a/src/Agent/WorkflowPlus.AIAgent.csproj
+++ b/src/Agent/WorkflowPlus.AIAgent.csproj
@@ -13,8 +13,12 @@
         <PackageReference Include="Microsoft.SemanticKernel" Version="1.25.0" />
         <PackageReference Include="Microsoft.SemanticKernel.Connectors.OpenAI" Version="1.25.0" />
         
-        <!-- OpenAI SDK -->
+        <!-- OpenAI SDK (Official - supports Structured Outputs) -->
+        <PackageReference Include="OpenAI" Version="2.1.0-beta.1" />
         <PackageReference Include="Azure.AI.OpenAI" Version="2.1.0-beta.1" />
+        
+        <!-- Validation (Pydantic-equivalent for C#) -->
+        <PackageReference Include="FluentValidation" Version="11.9.0" />
         
         <!-- Storage -->
         <PackageReference Include="Microsoft.Data.Sqlite" Version="9.0.0" />
