--- a/src/Core/WorkflowPlus.AIAgent.Core.csproj
+++ b/src/Core/WorkflowPlus.AIAgent.Core.csproj
@@ -10,6 +10,7 @@
     <ItemGroup>
         <PackageReference Include="Azure.Core" Version="1.36.0" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+        <PackageReference Include="FluentValidation" Version="11.9.0" />
     </ItemGroup>
 
 </Project>
